syntax = "proto3";

package dtos;

option go_package = "marshal/dtos";

message SmallType {
  int32 id = 1;
  string field1 = 2;
  string field2 = 3;
}

message MediumType {
  int32 id = 1;
  string field1 = 2;
  string field2 = 3;
  string field3 = 4;
  string field4 = 5;
  string field5 = 6;
  string field6 = 7;
  string field7 = 8;
  string field8 = 9;
}

message LargeType {
  int32 id = 1;
  string field1 = 2;
  string field2 = 3;
  string field3 = 4;
  string field4 = 5;
  string field5 = 6;
  string field6 = 7;
  string field7 = 8;
  string field8 = 9;
  repeated MediumType nested = 10;
}
